6.0.11
------

6.0.10
------
(RB=731493)
Add a d2 delay test framework

(RB=742691)
Fixed cookie attribute name Max-Age.

6.0.9
------
(RB=743280)
Use parameterized logging to avoid excessive string concatenation

6.0.8
------
(RB=736708)
Add symlink support for Zk#getChildren with Children2Callback

6.0.7
------
(RB=727062)
Fixing the flawed comparision of keys on batch update/patch operations.

(RB=730505)
Added parseq_restClient into restli-int-test module.

(RB=733000)
Add HTTP_REQUEST_CONTENT_ENCODINGS to allowedClientPropertyKeys

6.0.6
------
(RB=721198)
Optimize ZookeeperEphemeral to reduce to number of read request to zookeeper.

6.0.5
------
(RB=729776)
Fix the wiki link for resource compatibility checking in Pegasus plugin.

(RB=720861)
Fix missing custom information for record field and union member.

(RB=723090)
Refactor code related to custom type.

(RB=717162)
Change the Pegasus compatibility checker to consider the addition of a 
required field with a default as compatible and to consider setting a 
default on an existing required field as backward incompatible.

(RB=725964)
Modifying tag to make javadoc generation happy

6.0.4
------
(RB=714504)
Add missing d2 config properties into d2 schemas

6.0.3
------
(RB=711485)
Fix build of the example projects.
(RB=713641)
Remove default values for zkHosts

6.0.2
------
(RB=710508)
Fix doc generation for action methods with custom parameter types.

(RB=701756)
Added cookies to isEquals/hashCode/toString in Request.java

(RB=705680)
Added addAcceptTypes and addAcceptType to RestliRequestOptionsBuilder

(RB=710953)
Resolving 500 error issue from invalid list params to return 400 instead.

6.0.1
------
Bump zookeeper library from 3.3.4 to 3.4.6

6.0.0
------
(RB=697686)
Add MultiplexerRunMode configuration that controls whether individual requests are executed as separate ParSeq plans or all are part of one ParSeq plan, assuming resources handle those requests asynchronously using ParSeq.

(RB=696168)