@@ -20,6 +20,11 @@ package com.linkedin.restli.internal.server.model;
 import com.linkedin.restli.server.ResourceConfigException;
 import com.linkedin.restli.server.RestLiConfig;
 
+import com.linkedin.restli.server.annotations.RestAnnotations;
+import com.linkedin.restli.server.annotations.RestLiAssociation;
+import com.linkedin.restli.server.annotations.RestLiCollection;
+import com.linkedin.restli.server.annotations.RestLiSimpleResource;
+import java.lang.annotation.Annotation;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
@@ -72,51 +77,68 @@ public class RestLiApiBuilder implements RestApiBuilder
     return buildResourceModels(annotatedClasses);
   }
 
+  private static Class<?> getParentResourceClass(Class<?> resourceClass)  {
+    for (Annotation a : resourceClass.getAnnotations()) {
+      if (a instanceof RestLiAssociation) {
+        return ((RestLiAssociation)a).parent();
+      }
+      else if (a instanceof RestLiCollection) {
+        return ((RestLiCollection)a).parent();
+      }
+      else if (a instanceof RestLiSimpleResource) {
+        return ((RestLiSimpleResource)a).parent();
+      }
+    }
+
+    return RestAnnotations.ROOT.class;
+  }
+
+  private static void processResourceInOrder(Class<?> annotatedClass, Map<Class<?>, ResourceModel> resourceModels, Map<String, ResourceModel> rootResourceModels)
+  {
+    if (resourceModels.containsKey(annotatedClass))
+    {
+      return;
+    }
+
+    Class<?> parentClass = getParentResourceClass(annotatedClass);
+
+    // If we need to create the parent class, do it before the child class. Recurse, in case of grandparents.
+    if (parentClass != RestAnnotations.ROOT.class)
+    {
+      processResourceInOrder(parentClass, resourceModels, rootResourceModels);
+    }
+
+    ResourceModel model = RestLiAnnotationReader.processResource(annotatedClass, resourceModels.get(parentClass));
+
+    if (model.isRoot())
+    {
+      String path = "/" + model.getName();
+      final ResourceModel existingResource = rootResourceModels.get(path);
+      if (existingResource != null)
+      {
+        String errorMessage = String.format("Resource classes \"%s\" and \"%s\" clash on the resource name \"%s\".",
+                                            existingResource.getResourceClass().getCanonicalName(),
+                                            model.getResourceClass().getCanonicalName(),
+                                            existingResource.getName());
+        throw new ResourceConfigException(errorMessage);
+      }
+      rootResourceModels.put(path, model);
+    }
+
+    resourceModels.put(annotatedClass, model);
+  }
+
   public static Map<String, ResourceModel> buildResourceModels(
           final Set<Class<?>> restliAnnotatedClasses)
   {
+    Map<String, ResourceModel> rootResourceModels = new HashMap<String, ResourceModel>();
     Map<Class<?>, ResourceModel> resourceModels = new HashMap<Class<?>, ResourceModel>();
 
     for (Class<?> annotatedClass : restliAnnotatedClasses)
     {
-      ResourceModel resourceModel = RestLiAnnotationReader.processResource(annotatedClass);
-      resourceModels.put(annotatedClass, resourceModel);
-    }
-
-    Map<String, ResourceModel> rootResourceModels = new HashMap<String, ResourceModel>();
-
-    for (Class<?> annotatedClass : restliAnnotatedClasses)
-    {
-      ResourceModel resourceModel = resourceModels.get(annotatedClass);
-      if (resourceModel.isRoot())
-      {
-        String path = "/" + resourceModel.getName();
-        final ResourceModel existingResource = rootResourceModels.get(path);
-        if (existingResource != null)
-        {
-          String errorMessage = String.format("Resource classes \"%s\" and \"%s\" clash on the resource name \"%s\".",
-                                        existingResource.getResourceClass().getCanonicalName(),
-                                        resourceModel.getResourceClass().getCanonicalName(),
-                                        existingResource.getName());
-          throw new ResourceConfigException(errorMessage);
-        }
-        rootResourceModels.put(path, resourceModel);
-      }
-      else
-      {
-        ResourceModel parentModel = resourceModels.get(resourceModel.getParentResourceClass());
-        if (parentModel == null)
-        {
-          throw new ResourceConfigException("Could not find model for parent class'"
-              + resourceModel.getParentResourceClass().getName() + "'for: "
-              + resourceModel.getName());
-        }
-        resourceModel.setParentResourceModel(parentModel);
-        parentModel.addSubResource(resourceModel.getName(), resourceModel);
-      }
+      processResourceInOrder(annotatedClass, resourceModels, rootResourceModels);
     }
 
     return rootResourceModels;
   }
-
 }
